# ExtractMap

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark.h  pruning.bench.all.sh  pruning.bench.cpp  pruning.bench.py
benchmarks/conf/: example.cfg
cmake/Modules/: FindProj4.cmake
data/: CMakeLists.txt  salzburg-at-locations.csv  styria-at-locatoins.csv
data/scripts/: osm-settlements-to-csv.py  osm-settlements-to-csv.xslt  osm-to-osrm.sh
doc/: bench.md  data.md
doc/build-instructions/: linux.md
doc/notebooks/: Location Graph Extraction.ipynb  example.cpp  pruning.py  readme.txt
examples/: CMakeLists.txt
examples/pruning/: CMakeLists.txt  pruning.cpp
examples/routes_table/: CMakeLists.txt  routes_table.cpp
src/: CMakeLists.txt
src/extr_map/: CMakeLists.txt
src/extr_map/common/: matrix.hpp
src/extr_map/common/detail/: matrix_impl.hpp
src/extr_map/pruning/: geo_pruning.cpp  geo_pruning.hpp  triangle_pruning.cpp  triangle_pruning.hpp  vincenty_distance.cpp
src/extr_map/routing/: osrm_table.cpp  osrm_table.hpp
